[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Login.gd" type="Script" id=1]

[node name="Login" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 152.0
margin_top = 129.0
margin_right = 246.0
margin_bottom = 149.0
text = "Opret bruger"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 102.0
margin_top = 13.0
margin_right = 295.0
margin_bottom = 43.0

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 102.0
margin_top = 62.0
margin_right = 295.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 21.0
margin_right = 79.0
margin_bottom = 35.0
text = "Username"

[node name="Label2" type="Label" parent="."]
margin_left = 3.0
margin_top = 69.0
margin_right = 87.0
margin_bottom = 83.0
text = "Adgangskode"

[node name="Button2" type="Button" parent="."]
margin_left = 122.0
margin_top = 100.0
margin_right = 274.0
margin_bottom = 120.0
text = "Log ind"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 195, 54 )
current = true
zoom = Vector2( 0.7, 0.7 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
